--- a/Assignment 10/Task 2 weather-app/weather-app/src/index.css
+++ b/Assignment 10/Task 2 weather-app/weather-app/src/index.css
@@ -4,9 +4,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: lightblue;
+  background-image:url('clouds.gif');
+  background-size: cover;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.daily-details-grid {
+  background-color: azure!important;
+  border-radius: 1.4em!important;
+}
+.weather {
+  background-color: turquoise!important;
 }
